--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
+    <string name="sort">Sort By</string>
+    <string name="no_movies">No movies found!</string>
+
+    <!-- The sort types -->
+    <string-array name="sortItems">
+        <item>Sort by</item>
+        <item>Popularity</item>
+        <item>Highest-rated</item>
+    </string-array>
+
 </resources>
