Added the SettingsActivity Changes on the MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
         <item>Popularity</item>
         <item>Highest-rated</item>
     </string-array>
+    <string name="settings_title">Settings</string>
 
 </resources>
