--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="details_title">Movie details</string>
     <string name="saved_sort_movie">prefSortMovie</string>
     <string name="pref_name">SettingsPref</string>
+    <string name="content_authority">com.movies.bruno.udacity.popularmovies</string>
 
 </resources>
