Fragment implementation on devices and tablets to adapt the layout on tablets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="pref_name">SettingsPref</string>
     <string name="content_authority">com.movies.bruno.udacity.popularmovies</string>
 
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
