--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="action_about">About</string>
     <string name="sort">Sort By</string>
     <string name="no_movies">No movies found!</string>
+    <string name="about_title">About Pop Movies</string>
+    <string name="version">Version: </string>
 
     <!-- The sort types -->
     <string-array name="sortItems">
@@ -19,5 +21,6 @@
     <string name="saved_sort_movie">prefSortMovie</string>
     <string name="pref_name">SettingsPref</string>
     <string name="content_authority">com.movies.bruno.udacity.popularmovies</string>
+    <string name="title_activity_about">AboutActivity</string>
 
 </resources>
